--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>WordGenerator</title>
-  <base href="https://ankitpatel1999.github.io/word-generator">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="word-generator">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.c534280bb7332e8d94a7.css"></head>
 <body>
